--- a/demo.Rmd
+++ b/demo.Rmd
@@ -214,7 +214,21 @@ get_boundaries <- function(places) {
                 expand = FALSE
             ) +
             theme_void() +
-            labs(title = places[i])
+            # theme(
+            #     plot.title = element_text(
+            #         size = 20,
+            #         family = "lato",
+            #         face = "bold",
+            #         hjust = .5
+            #     ),
+            #     plot.subtitle = element_text(
+            #         family = "lato",
+            #         size = 8,
+            #         hjust = .5,
+            #         margin = margin(2, 0, 5, 0)
+            #     )
+            # ) +
+            labs(title = toupper(places[i]))
     }
 }
 
