--- a/demo.Rmd
+++ b/demo.Rmd
@@ -169,7 +169,7 @@ get_boundaries <- function(places) {
             pluck("osm_lines") %>%
             st_intersection(bb)
         
-        ggplot() +
+        p <- ggplot() +
             geom_sf(
                 data = river,
                 inherit.aes = FALSE,
@@ -214,21 +214,8 @@ get_boundaries <- function(places) {
                 expand = FALSE
             ) +
             theme_void() +
-            # theme(
-            #     plot.title = element_text(
-            #         size = 20,
-            #         family = "lato",
-            #         face = "bold",
-            #         hjust = .5
-            #     ),
-            #     plot.subtitle = element_text(
-            #         family = "lato",
-            #         size = 8,
-            #         hjust = .5,
-            #         margin = margin(2, 0, 5, 0)
-            #     )
-            # ) +
             labs(title = toupper(places[i]))
+        return(p)
     }
 }
 
