add graph section

--- a/demo_cc.Rmd
+++ b/demo_cc.Rmd
@@ -110,13 +110,30 @@ survey_google %>%
 
 ## Visualising non spatial data: Making graphs {#graphs}
 
-Let's visualise some non spatial data
-
+Let's visualise some non spatial data, for instance the relation between the semiority at TU Delft and the reported interest in R.
 
 ```{r graphs}
 library(ggplot2)
 
-plot(survey_together$SeniorityAtTUD, survey_together$InterestR)
+q <- ggplot(survey_together, aes(x=SeniorityAtTUD, y=InterestR))
+q+ geom_point()
+
+```
+
+We can even estimate a linear regression between the two and visualise the result.
+
+```{r regression}
+
+fit <- lm(InterestR ~ SeniorityAtTUD, data = survey_together)
+
+ggplot(fit$model, aes_string(x = names(fit$model)[2], y = names(fit$model)[1])) + 
+  geom_point() +
+  stat_smooth(method = "lm", col = "red") +
+  labs(title = paste("Adj R2 = ",signif(summary(fit)$adj.r.squared, 2),
+                     "Intercept =",signif(fit$coef[[1]],2 ),
+                     " Slope =",signif(fit$coef[[2]], 2),
+                     " P =",signif(summary(fit)$coef[2,4], 2)))
+
 ```
 
 
